@@ -21,6 +21,7 @@ static const R_CallMethodDef callMethods[] = {
     {".bamfile_open", (DL_FUNC) & bamfile_open, 3},
     {".bamfile_close", (DL_FUNC) & bamfile_close, 1},
     {".bamfile_isopen", (DL_FUNC) & bamfile_isopen, 1},
+    {".bamfile_isincomplete", (DL_FUNC) & bamfile_isincomplete, 1},
     {".read_bamfile_header", (DL_FUNC) & read_bamfile_header, 1},
     {".scan_bamfile", (DL_FUNC) & scan_bamfile, 8},
     {".count_bamfile", (DL_FUNC) & count_bamfile, 4},
